--- a/src/app/modules/order/order-list/order-list.component.scss
+++ b/src/app/modules/order/order-list/order-list.component.scss
@@ -90,8 +90,9 @@
   .p-calendar,
   .p-inputnumber,
   .p-chips,
+  .p-inputnumber-input,
   .p-multiselect {
-    width: 100%;
+    width: inherit !important;
   }
 }
 
