Add "Save & Add New" button to product form for streamlined product entry. Update saveProduct method to handle new product creation while preserving existing product data. Enhance user experience by allowing quick addition of multiple products.

--- a/src/app/modules/product/product-list/product-list.component.html
+++ b/src/app/modules/product/product-list/product-list.component.html
@@ -793,6 +793,9 @@
             <p-button label="Save" severity="success" icon="pi pi-check" [disabled]="productForm.invalid"
                 (click)="saveProduct()">
             </p-button>
+            <p-button label="Save & Add New" severity="success" icon="pi pi-check" [disabled]="productForm.invalid"
+            (click)="saveProduct(true)">
+        </p-button>
         </div>
     </ng-template>
 </p-dialog>
