Refactor app routes and remove order timeline features. Update default redirection from 'inventory' to 'orders' and comment out inventory-related routes and menu items. Delete order timeline components, interfaces, and services to streamline the codebase and enhance order management functionality.

--- a/src/app/modules/order/order-list/order-list.component.scss
+++ b/src/app/modules/order/order-list/order-list.component.scss
@@ -77,7 +77,7 @@
 /* Form Styles */
 .field {
   margin-bottom: 1.5rem;
-
+  width: 100%;
   label {
     display: block;
     margin-bottom: 0.5rem;
