--- a/src/app/modules/category/catgory-list/catgory-list.component.html
+++ b/src/app/modules/category/catgory-list/catgory-list.component.html
@@ -48,7 +48,7 @@
                 <ng-template pTemplate="body" let-category>
                     <tr>
                         <td>
-                            <img [src]="category?.image?.filePath" [fallback]="'/images/picture.png'" [alt]="category.name | multiLanguage:currentLanguage()" class="w-10 h-10 object-cover">
+                            <img [src]="getImageUrl(category?.image?.filePath)" [fallback]="'/images/picture.png'" [alt]="category.name | multiLanguage:currentLanguage()" class="w-10 h-10 object-cover">
                         </td>
                         <td>
                             <span class="font-medium">{{category.name | multiLanguage:currentLanguage()}}</span>
