--- a/src/app/modules/product/product-list/product-list.component.html
+++ b/src/app/modules/product/product-list/product-list.component.html
@@ -59,7 +59,7 @@
                 <span class="font-semibold">${{ product.price }}</span>
             </td>
             <td style="width:14%; min-width:10rem;">
-                        {{ product.category.name | multiLanguage:currentLanguage() }}
+                        {{ product.category?.name | multiLanguage:currentLanguage() }}
             </td>
             <!-- <td style="width:14%; min-width: 10rem;">
                 <p-rating [ngModel]="product.rating" [readonly]="true"></p-rating>
